# passr

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
passr/: __init__.py  application.py  pyramid.py  resolvers.py
passr/tests/: test_statemanager.py
tests/: test_passr.py
