[tool.poetry]
name = "passr"
version = "0.1.0"
description = "Python As an SSR framework"
authors = ["Romain Commandé <commande.romain+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
poetry = "^0.12.17"
tox = "^3.13"
lockfile = "^0.12.2"
ipython = "^7.6"
pdbpp = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
