[tool.poetry]
name = "passr"
version = "0.1.0"
description = "Python As an SSR framework"
authors = ["Romain Commandé <commande.romain+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
poetry = "^0.12.17"
tox = "^3.13"
lockfile = "^0.12.2"
ipython = "^7.6"
pdbpp = "^0.10.0"
flake8 = "^3.7"
pytest-sugar = "^0.9.2"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py35,py36,py37,py38

[testenv]
deps = poetry
commands =
     poetry install
     poetry run pytest
     poetry run flake8
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

